# vLLM_Display

./: .env  .gitignore  README.md  debug_merged_text.txt
backend/: check_image.py  check_processed.py  debug_fix.py  debug_fix_empty.py  debug_minimal.py  debug_nid_json.py  debug_ollama.py  requirements.txt
backend-pipeline/: README.md  debug_preprocessing.py  debug_prompt_logic.py  pyproject.toml  requirements.txt  spawn_workers.py  stress_test.py  test_nid_back.py  test_pipeline_debug.py  test_verification.py  verify_fast_ocr.py  verify_full_pipeline.py  verify_scalability.py
backend-pipeline/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
backend-pipeline/src/backend_pipeline/: main.py
backend-pipeline/src/backend_pipeline/api/: fast_ocr.py  models.py  routes.py
backend-pipeline/src/backend_pipeline/ocr/: vllm_client.py
backend-pipeline/src/backend_pipeline/postprocess/: consensus.py  digits.py  schema_engine.py
backend-pipeline/src/backend_pipeline/preprocess/: multiview.py  normalize.py
backend-pipeline/src/backend_pipeline/queue/: redis_streams.py
backend-pipeline/src/backend_pipeline/storage/: results_store.py
backend-pipeline/src/backend_pipeline/workers/: pipeline.py  worker.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: base.py  manager.py  (+2 more)
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ModelSelector.tsx  Navbar.tsx  ResultsDisplay.tsx  ScanningAnimation.tsx  TemplateInput.tsx  UploadArea.tsx
frontend/lib/: api.ts
(+6 files in other folders)
